Zusammenfassung fertig, bibstyle changed

--- a/bibliography.tex
+++ b/bibliography.tex
@@ -1,16 +1,14 @@
 \cleardoublepage
 %\manualmark
 %\markboth{Literaturverzeichnis}{Literaturverzeichnis}
-%\bibliographystyle{unsrt} % standart
 %\bibliographystyle{bibstyles/gerunsrtmod} % titel kursiv, journal normal; ist fein, modifiziert damit die Namen stimmen
-%\bibliographystyle{gerunsrtdoi} % titel kursiv, journal normal; ist fein, modifiziert damit die Namen stimmen + doi anzeigen (in progress ...)
-%\bibliographystyle{IEEEtrans} % Hinweis von Christian
-\bibliographystyle{bibstyles/bibteichert} % Fabian Teichert
+\bibliographystyle{bibstyles/bibelor} % Original von Fabian Teichert
 %\usepackage{url}
 
 \newcommand{\bstaddress}{}
 \newcommand{\bstauthor}{\scshape}
 \newcommand{\bstdoi}{}
+\newcommand{\bstisbn}{}
 \newcommand{\bstedition}{}
 \newcommand{\bstetal}{\scshape}
 \newcommand{\bstjournal}{}
