--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -31,6 +31,8 @@
 \include{abstract}
 \include{contents}
 
+\pagenumbering{arabic} % Fäng erneut bei 1 an.
+ 
 \cleardoublepage
 \include{intro}
 \cleardoublepage
