--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -29,24 +29,27 @@
 \pagenumbering{roman}
 
 \include{abstract}
-\include{contents}
+%% \include{contents}
 
 \pagenumbering{arabic} % Fäng erneut bei 1 an.
- 
+
 \cleardoublepage
 \include{intro}
-\cleardoublepage
-\include{theory}
-\cleardoublepage
-\include{models}
-\cleardoublepage
-\include{results}
+
+%% \cleardoublepage
+%% \include{theory}
+%% \cleardoublepage
+%% \include{models}
+%% \cleardoublepage
+%% \include{results}
+
 \cleardoublepage
 \include{summary}
-\cleardoublepage
-\include{appendix}
+
+%% \cleardoublepage
+%% \include{appendix}
 
 \include{bibliography}
-\include{unischeiss}
+%% \include{unischeiss}
 
 \end{document}
